Enlaces abren en una nueva pestaña

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
         <!--Listado de tipos de productos -->
         <h2>Nuestros proveedores</h2>
         <ul>
-            <li><a href="https://playerytees.com.mx/"> Playerytees</a></li>
-            <li><a href="https://dacache.com/es">Dacache</a></li>
-            <li><a href="https://www.airman.mx/">Airman</a></li>
-            <li><a href="https://yazbek.com.mx/">Yazbek</a></li>
-            <li><a href="https://www.bibo.com.mx/">BIBO</a></li>
-            <li><a href="https://bonesfit.com.mx/">Bones</a></li>
-            <li><a href="https://assoluto.com.mx/">Assoluto</a></li>
-            <li><a href="https://gildancorp.com/es/">Gildan</a></li>
-            <li><a href="https://invasioncaps.com/">Invasion</a></li>
-            <li><a href="https://royalone.mx/">Royal One</a></li>
-            <li><a href="https://prezenza.com/">Prezenza</a></li>
+            <li><a href="https://playerytees.com.mx/" target="_blank" rel="noopener noreferrer">Playerytees</a></li>
+            <li><a href="https://dacache.com/es" target="_blank" rel="noopener noreferrer">Dacache</a></li>
+            <li><a href="https://www.airman.mx/" target="_blank" rel="noopener noreferrer">Airman</a></li>
+            <li><a href="https://yazbek.com.mx/" target="_blank" rel="noopener noreferrer">Yazbek</a></li>
+            <li><a href="https://www.bibo.com.mx/" target="_blank" rel="noopener noreferrer">BIBO</a></li>
+            <li><a href="https://bonesfit.com.mx/" target="_blank" rel="noopener noreferrer">Bones</a></li>
+            <li><a href="https://assoluto.com.mx/" target="_blank" rel="noopener noreferrer">Assoluto</a></li>
+            <li><a href="https://gildancorp.com/es/" target="_blank" rel="noopener noreferrer">Gildan</a></li>
+            <li><a href="https://invasioncaps.com/" target="_blank" rel="noopener noreferrer">Invasion</a></li>
+            <li><a href="https://royalone.mx/" target="_blank" rel="noopener noreferrer">Royal One</a></li>
+            <li><a href="https://prezenza.com/" target="_blank" rel="noopener noreferrer">Prezenza</a></li>
         </ul>
         <!--Formulario -->
         <div class="form-container">
